--- a/Streams.ChangeTracking/Streams.ChangeTracking.csproj
+++ b/Streams.ChangeTracking/Streams.ChangeTracking.csproj
@@ -1,8 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.1</Version>
+    <Version>1.1.0</Version>
     <PackageId>Com.RFranco.Streams.ChangeTracking</PackageId>
     <Title>Streams.ChangeTracking</Title>
     <Description>Library to manage database change tracking as a stream.</Description>
@@ -13,13 +12,13 @@
     <PackageProjectUrl>https://github.com/rfrancotechnologies/streams</PackageProjectUrl>
     <IncludeSource>false</IncludeSource>
     <PackageReleaseNotes>
-      Added upper limit on query which obtains last changes from table, in order to avoid duplicate items on stream.
+      Updated Streams library version and implemented functionality to externalize database change table initialization.
     </PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="1.60.6" />
     <PackageReference Include="System.Data.SqlClient" Version="4.6.0" />
-    <PackageReference Include="Com.RFranco.Streams" Version="1.0.0" />
+    <PackageReference Include="Com.RFranco.Streams" Version="1.1.0" />
   </ItemGroup>   
 </Project>
